# flask-ad-auth

./: .gitignore  README.md  devenv.nix  devenv.yaml  example.py  pyproject.toml  setup.py
flask_ad_auth/: __init__.py  ad_login.py
tests/: test_sql_databases.py
