[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flask-ad-auth"
version = "1.0.0"
description = "Flask Data Visualization Helpers"
authors = [
    "Florian Klien <florian.klien@smaxtec.com>",
    "Kristof Krenn <kristof.krenn@smaxtec.com>",
    "Matthias Thym <matthias.thym@smaxtec.com>",
    "Matthias Wutte <matthias.wutte@gmail.com>",
    "Matthias Wutte <matthias.wutte@smaxtec.com>",
    "Mwoermann <mwoermann@informationsfabrik.de>",
    "Philipp Kulich <philipp.kulich@smaxtec.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

flask = "^2.0.1"
werkzeug = "^2.0.3"
flask-login = "^0.6.1"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mock = "^5.1.0"

[tool.semantic_release]
version_variable = [ "pyproject.toml:version" ]
build_command = "poetry build"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
force_grid_wrap = 2

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
known_local_folder = ["flask_ad_auth"]
force_grid_wrap = 2
treat_all_comments_as_code = true
use_parentheses = true
line_length = 100
